# browser-sandbox

./: .gitignore  README.md  passwords.txt
anti-phishing/: playground.ipynb  poc.ipynb  poc.py
antivirus/: file-analyzer.py
antivirus/anti-phishing/: playground.ipynb  poc.ipynb
antivirus/dynamic/: dyn_analyzer.py  libc_hook.c  libhook.py
antivirus/honeypots/: honeypot.py  honeypot.sh  passwords.txt
antivirus/kernel-module/: Dockerfile  Makefile  hook_syscall.c
antivirus/sigma-engine(depricated)/pySigma-backend-pySigma-backend-bash/: pyproject.toml
antivirus/sigma-engine(depricated)/pySigma-backend-pySigma-backend-bash/sigma/pipelines/pySigma-backend-bash/: __init__.py
antivirus/sigma-engine(depricated)/pySigma-backend-pySigma-backend-bash/tests/: test_backend_pySigma-backend-bash.py
antivirus/static/: yaraengine.py
chrome-docker/: Dockerfile  downloads.py  file-analyzer-test.py  openbox-autostart  rc.xml  start-vnc.sh
chrome-extension/: background.js  manifest.json  popup.html
file-check-server/: converted_sigma_ruls  file_hashes.db  server.py  sigma_test  test.ipynb  yaraengine.py
file-check-server/malware/: test.yar
file-check-server/rules_by_level/: critical.txt  high.txt  informational.txt  low.txt  medium.txt
file-check-server/sandbox-docker/: Dockerfile  audit.rules  critical.txt  high.txt  informational.txt  malicious_check.py  medium.txt  runner.sh
project_demo/: a.out  evil_exe.out  good_file.txt  rwx.elf
pySigma-backend-pySigma-backend-bash/: README.md
webserver/: app.py
webserver/static/: script.js  style.css  vm_style.css
(+30 files in other folders)
