[tool.poetry]
name = "pySigma-backend-pySigma-backend-bash"
version = "0.1.0"
description = "pySigma bash backend"
authors = ["Raz Chai <razi.chai@gmail.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/RazChai/pySigma-backend-pySigma-backend-bash"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
